Binomial tree stock price

--- a/MonteCarlo.ipynb
+++ b/MonteCarlo.ipynb
@@ -5,7 +5,8 @@
    "id": "248aa9ff-6bdc-4428-a534-3ae2c94f393f",
    "metadata": {},
    "source": [
-    "# Monte Carlo"
+    "# Monte Carlo\n",
+    "---"
    ]
   },
   {
@@ -184,25 +185,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64bf0c8e-57f8-4fad-978c-1ca9fd8fc930",
+   "metadata": {},
+   "source": [
+    "# Binomial Model\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b73864a-746d-424a-8883-3cee93f11a32",
+   "metadata": {},
+   "source": [
+    "Goes down 2 different paths usually up or down\n",
+    "\n",
+    "example:\n",
+    "\n",
+    "You can use a Binomial Model for Stock / Pricing options:\n",
+    "1) Start with a beginning value/asset: $50\n",
+    "2) size of up move (this is obtained by Volatility of a stock): U = 1.25\n",
+    "3) size of the down move is measured by: D = 1/U = 0.8\n",
+    "4) Probability of up move: P(U) = 0.6\n",
+    "5) Probability of down move: P(D) = 0.4\n",
+    "\n",
+    "How do you get #4 (probability of up move)?\n",
+    "In other words: risk-neutral pseudo probability of an up-move\n",
+    "\n",
+    "$\\pi$U = (1 + Rf - D)/(U - D)\n",
+    "\n",
+    "and down:\n",
+    "\n",
+    "$\\pi$D = 1 - $\\pi$U\n",
+    "\n",
+    "Assume Rf (risk free rate) is = 7%\n",
+    "\n",
+    "\n",
+    "$\\pi$U = (1 + 0.07 - 0.8)/(1.25 - 0.8) = 0.6\n",
+    "\n",
+    "$\\pi$D = 0.4\n",
+    "\n",
+    "UP: $50 \\cdot 1.25 = $62.50\n",
+    "\n",
+    "DOWN: $50 \\cdot 0.8 = $40.00"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fad50b00-afa2-444c-a22b-d7732ccea92e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Up and Down Factors, and Probabilities\n",
+    "\n",
+    "#### **Up and Down Factors**\n",
+    "$$\n",
+    "u = \\exp\\left(\\frac{\\text{SD} \\cdot \\sqrt{T}}{n}\\right)\n",
+    "$$\n",
+    "$$\n",
+    "d = \\frac{1}{u} = \\exp\\left(-\\frac{\\text{SD} \\cdot \\sqrt{T}}{n}\\right)\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **Probability of an Upward Move**\n",
+    "$$\n",
+    "p = \\frac{1}{2} + \\frac{1}{2} \\cdot \\frac{\\mu}{\\text{SD}} \\cdot \\sqrt{\\frac{T}{n}}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **Probability of a Downward Move**\n",
+    "$$\n",
+    "1 - p = \\frac{1}{2} - \\frac{1}{2} \\cdot \\frac{\\mu}{\\text{SD}} \\cdot \\sqrt{\\frac{T}{n}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "029a0793-2e95-4524-998e-d5f510c1a932",
+   "metadata": {},
+   "source": [
+    "T is the length of prediction in years, and n is the number of time steps"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "ddcc89ac-965d-411f-9183-75f717a78055",
+   "execution_count": 3,
+   "id": "a39a35b4-e4f0-4aaf-9a90-e0922fc18750",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56\n"
+      "Requirement already satisfied: seaborn in ./pyenv/lib/python3.13/site-packages (0.13.2)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in ./pyenv/lib/python3.13/site-packages (from seaborn) (2.2.1)\n",
+      "Requirement already satisfied: pandas>=1.2 in ./pyenv/lib/python3.13/site-packages (from seaborn) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in ./pyenv/lib/python3.13/site-packages (from seaborn) (3.10.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.2)\n",
+      "Requirement already satisfied: pillow>=8 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (11.0.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in ./pyenv/lib/python3.13/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in ./pyenv/lib/python3.13/site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in ./pyenv/lib/python3.13/site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in ./pyenv/lib/python3.13/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.17.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "!pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bd88a415-7c7a-47ea-b75a-a2b707e19358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!conda install --yes seaborn\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "90d6464b-e47d-48dc-817f-88ddcac27eb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "p < 0, p > 1 or p is NaN",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 44\u001b[0m\n\u001b[1;32m     41\u001b[0m     plt\u001b[38;5;241m.\u001b[39mlegend()\n\u001b[1;32m     42\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m---> 44\u001b[0m \u001b[43mbinomial_tree\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m252\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m21.0\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m252\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m252\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[11], line 20\u001b[0m, in \u001b[0;36mbinomial_tree\u001b[0;34m(mean, sigma, S0, N, T, step)\u001b[0m\n\u001b[1;32m     18\u001b[0m down_times \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((N, \u001b[38;5;28mlen\u001b[39m(T)))\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(T)):\n\u001b[0;32m---> 20\u001b[0m     up_times[:,idx] \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbinomial\u001b[49m\u001b[43m(\u001b[49m\u001b[43mT\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m     down_times[:,idx] \u001b[38;5;241m=\u001b[39m T[idx]\u001b[38;5;241m/\u001b[39mstep \u001b[38;5;241m-\u001b[39m up_times[:,idx]\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# terminal price\u001b[39;00m\n",
+      "File \u001b[0;32mnumpy/random/mtrand.pyx:3486\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.binomial\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_common.pyx:430\u001b[0m, in \u001b[0;36mnumpy.random._common.check_constraint\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: p < 0, p > 1 or p is NaN"
+     ]
+    }
+   ],
+   "source": [
+    "# mu = mean\n",
+    "# sigma = volatility\n",
+    "# S0 = startpoint\n",
+    "# N = # of simulations\n",
+    "# T = Time horizon in years\n",
+    "# step = time step in years\n",
+    "\n",
+    "# 252 days in a stock year\n",
+    "\n",
+    "def binomial_tree(mean, sigma, S0, N, T, step):\n",
+    "    # up/down and probability\n",
+    "    u = np.exp(sigma * np.sqrt(step))\n",
+    "    d = 1.0/u\n",
+    "    p = 0.5+0.5*(mean/sigma)*np.sqrt(step)\n",
+    "\n",
+    "    # binomial tree\n",
+    "    up_times = np.zeros((N, len(T)))\n",
+    "    down_times = np.zeros((N, len(T)))\n",
+    "    for idx in range(len(T)):\n",
+    "        up_times[:,idx] = np.random.binomial(T[idx]/step, p, N)\n",
+    "        down_times[:,idx] = T[idx]/step - up_times[:,idx]\n",
+    "\n",
+    "    # terminal price\n",
+    "    ST = S0 * u**up_times * d**down_times\n",
+    "\n",
+    "    plt.figure()\n",
+    "    plt.plot(ST[:,0], color='g', alpha=0.5, label='1 month horizon')\n",
+    "    plt.plot(ST[:,1], color='r', alpha=0.5, label='1 year horizon')\n",
+    "    plt.xlabel('time step, day')\n",
+    "    plt.ylabel('price')\n",
+    "    plt.title('Binomial-Tree Stock Simulation')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.figure()\n",
+    "    plt.hist(ST[:,0], color='g', alpha=0.5, label='1 month horizon')\n",
+    "    plt.hist(ST[:,1], color='r', alpha=0.5, label='1 year horizon')\n",
+    "    plt.xlabel('price')\n",
+    "    plt.ylabel('count')\n",
+    "    plt.title('Binomial-Tree Stock Simulation')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "binomial_tree(0.1, 1.0/252, 1, 10000, [21.0/252, 1.0], 1.0/252)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f931d96f-4665-4a80-9e10-35bd6eca0158",
+   "id": "a91a6b01-887d-499a-b360-0b4c57495886",
    "metadata": {},
    "outputs": [],
    "source": []
