--- a/MonteCarlo.ipynb
+++ b/MonteCarlo.ipynb
@@ -2592,6 +2592,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "id": "a5a2d8ed-15da-47eb-ba0f-771e00e96575",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[109], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m setU \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      2\u001b[0m setB \u001b[38;5;241m=\u001b[39m setU\u001b[38;5;241m.\u001b[39mdifference(setA)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "setU = set(range([1,2]))\n",
+    "setB = setU.difference(setA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "28f075d1-fc4d-4c4c-b759-50c1ae667559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]\n",
+      " [5]\n",
+      " [6]\n",
+      " [7]\n",
+      " [8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshapes array(s) to column array\n",
+    "print(np.array([[1,2,3,4], [5,6,7,8]]).reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "d12ba6b1-474e-482c-85ef-166118265833",
    "metadata": {},
