--- a/scikit-learn-keras-tensorflow-dimensionality.ipynb
+++ b/scikit-learn-keras-tensorflow-dimensionality.ipynb
@@ -785,9 +785,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d856885-1925-499e-8bde-b366567f3849",
+   "metadata": {},
+   "source": [
+    "reconstructed data (compressed then decompressed) is called reconstruction error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a5f0f361-1de5-43f5-a7dd-aa53316d1a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_recovered = pca.inverse_transform(X_reduced)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41d04557-f8f5-4594-8d56-ef65337d4852",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{X}_{\\text{reconstructed}} = \\mathbf{Z} \\mathbf{W}^T + \\mathbf{\\mu}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85b0d2a0-7b97-4ae5-89fc-fd46b49124bd",
+   "metadata": {},
+   "source": [
+    "If mean-centering was not applied before PCA, the equation simplifies to:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{X}_{\\text{reconstructed}} = \\mathbf{Z} \\mathbf{W}^T\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d27d4d38-3b78-4532-b246-dc663d177391",
+   "id": "f9c895c1-af85-4138-863a-007791d5f8e8",
    "metadata": {},
    "outputs": [],
    "source": []
