--- a/skt-training.ipynb
+++ b/skt-training.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "47ea9449-5be1-429f-8fd7-bca0aa1d4baf",
    "metadata": {},
    "outputs": [],
@@ -323,11 +323,384 @@
     "model = tf.keras.Sequential([\n",
     "    tf.keras.layers.Input(shape=(28, 28)),\n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(300, kernel_initalizer=\"he_normal\", use_bias=False),\n",
+    "    tf.keras.layers.Dense(300, kernel_initializer=\"he_normal\", use_bias=False),\n",
     "    tf.keras.layers.BatchNormalization(),\n",
-    "    tf.keras.layers.Activation(\"\n",
+    "    tf.keras.layers.Activation(\"relu\"),\n",
+    "    tf.keras.layers.Dense(100, kernel_initializer=\"he_normal\", use_bias=False),\n",
+    "    tf.keras.layers.BatchNormalization(),\n",
+    "    tf.keras.layers.Activation(\"relu\"),\n",
+    "    tf.keras.layers.Dense(10, activation=\"softmax\")\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbbaa4dc-2e46-435c-8c06-6f4150f9b9e1",
+   "metadata": {},
+   "source": [
+    "Hyperparams for `BatchNormalization` momentum:\n",
+    "\n",
+    "$\\hat{v}$: running average\n",
+    "\n",
+    "$\\hat{v}$ <- $\\hat{v}$ × momentum + v × (1 − momentum)\n",
+    "\n",
+    "axis:\n",
+    "\n",
+    "defaults to -1, last axis (using means and SD computed across other axes)\n",
+    "if you you want to treat each pixel independently axis=[1, 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5850ed5-bba3-4da6-90d0-3c8ae1d7bcd3",
+   "metadata": {},
+   "source": [
+    "### Gradient Clipping mitigates the exploding gradients (setting a threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a6ddfca3-1364-463f-a5cf-5037c4d7f189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizer = tf.keras.optimizer.SGD(clipvalue=1.0)\n",
+    "# model.compile([...], optimizer=optimizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6932ce1e-828a-4b5f-9d62-64bc5d4a2316",
+   "metadata": {},
+   "source": [
+    "clipping should be done by setting the threshold of the norm\n",
+    "usually we want to clip between -1.0 and 1.0\n",
+    "\n",
+    "we don't want to change the orientation of gradient example: [0.9, 100.0] to [0.9, 1.0]\n",
+    "clipnorm=1.0 will do this instead [0.9, 100.0] -> [0.00899, 0.9999] keeping orientation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483939a1-ecf9-46b6-8790-a2b704a68c1a",
+   "metadata": {},
+   "source": [
+    "### Resusing Layers\n",
+    "\n",
+    "You can re-use lower layers of a Deep NN by freezing them so backpropigation only performs on top layers instead of dropping them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b753cb3d-ae4c-43c4-8c34-bc167ca6461b",
+   "metadata": {},
+   "source": [
+    "### transfer learning\n",
+    "\n",
+    "say you have images of T-shirts and sandels and want to use the training from the fashion dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2c29231e-5a7f-437e-a8b4-de9e4314c921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# my_model_A was trained on fashion dataset\n",
+    "# model_A = tf.keras.models.load_model(\"my_model_A\")\n",
+    "# model_B_on_A = tf.keras.Sequential(model_A.layers[:-1])\n",
+    "# model_B_on_A.add(tf.keras.layers.Dense(1, activation=\"sigmoid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "950b2611-96e1-458b-8bdf-1029c43d83b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_A_clone = tf.keras.models.clone_model(model_A)\n",
+    "# model_A_clone.set_weights(model_A.get_weights()) # otherwise weights are initialized randomly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a4ea9f5c-0803-4d59-80f9-53ddb42b1686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    for layer in model_B_on_A.layers[:-1]:\\n        layer.trainable = False\\n\\n    optimizer = tf.keras.optimizers.SGD(learning_rate=0.001)\\n    model_B_on_A.compile(loss=\"binary_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to avoid large error gradients that may wreck the reused wweights\n",
+    "# freeze the reused layers during first few epochs\n",
+    "\"\"\"\n",
+    "    for layer in model_B_on_A.layers[:-1]:\n",
+    "        layer.trainable = False\n",
+    "\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.001)\n",
+    "    model_B_on_A.compile(loss=\"binary_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4144622d-f395-4965-b1d3-783666a222f3",
+   "metadata": {},
+   "source": [
+    "now unfreeze reused layers and continue training, good idea to reduce learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4b53e457-a25c-458e-8c4f-b832fdb5500c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nhistory = model_B_on_A.fit(X_trian_B, y_train_B, epochs=4,\\n                           validation_data=(X_valid_B, y_valid_B))\\n\\nfor layer in model_B_on_A.layers[:-1]:\\n    layer.trainable = True\\n\\noptimizer = tf.keras.optimizers.SGD(learning_rate=0.001)\\nmodel_B_on_A.compile(loss=\"binary_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\\nhistory = model_B_on_A.fit(X_train_B, y_train_B, epochs=16,\\n                           validation_data=(X_valid_B, y_valid_B))\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "history = model_B_on_A.fit(X_trian_B, y_train_B, epochs=4,\n",
+    "                           validation_data=(X_valid_B, y_valid_B))\n",
+    "\n",
+    "for layer in model_B_on_A.layers[:-1]:\n",
+    "    layer.trainable = True\n",
+    "\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.001)\n",
+    "model_B_on_A.compile(loss=\"binary_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\n",
+    "history = model_B_on_A.fit(X_train_B, y_train_B, epochs=16,\n",
+    "                           validation_data=(X_valid_B, y_valid_B))\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "676f5e9f-7d0a-4514-9228-bdba03641f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_B_on_A.evaluate(X_test_B, y_test_B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ccf0075-7ce9-452a-9227-8180135d7e26",
+   "metadata": {},
+   "source": [
+    "Transfer learning only works well with Deep convolutional neural networks, not small dense networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71b40f8b-2c42-41be-bb5a-c5931246372b",
+   "metadata": {},
+   "source": [
+    "### Unsupervised pretraining\n",
+    "\n",
+    "you can use this if you don't have much labeled training data, and you cannot find a model trained on a similar task, could use autoencoders or GANs, and the finial task is just on the labeled data using supervised learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a2b4a98-33bc-43ba-ae28-b3cdf6a76d26",
+   "metadata": {},
+   "source": [
+    "### optimizers\n",
+    "\n",
+    "(Regular gradient descent will take small steps when slope is gentle and big steps when slope is steep but will never pick up speed)\n",
+    "\n",
+    "- momentum\n",
+    "- Nesterov accelerated gradient\n",
+    "- AdaGrad\n",
+    "- RMSProp\n",
+    "- Adam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1abbd34-b8a4-45e3-bdc2-6a0d8d831fa1",
+   "metadata": {},
+   "source": [
+    "momemntum is like a ball in a bowl, it cares about previous gradients. It subtracts the local gradient from momentum vector at each iteration. Updates weights by adding momentum, gradient is used as an acceleration not speed\n",
+    "\n",
+    "To simulate some sort of friction and prevent momentum from growing large new hyperparameter β\n",
+    "0 (high friction) 1 (low) good to have friction gets rid of oscillations and speeds up convergence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f8863e4-b67d-46d0-afdd-b0664f201014",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent:\n",
+    "$$ w := w - \\alpha \\nabla J(w) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b91ebe59-3c2f-43de-b1d1-c7bd7d4819a6",
+   "metadata": {},
+   "source": [
+    "### Momentum Gradient Descent:\n",
+    "$$ v := \\beta v - \\alpha \\nabla J(w) $$\n",
+    "$$ w := w + v $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1825893c-7bf6-4726-aaaa-23d9dc5d2c35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizer = tf.keras.optimizers.SGD(learning_rate=0.001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc8677aa-d3eb-4427-9996-1b820231d25a",
+   "metadata": {},
+   "source": [
+    "### Nesterov Accelerated Gradient (NAG)\n",
+    "\n",
+    "a variant to momentum optimization measures the gradient of the cost function not local but slightly ahead. Applies the gadients after momentum step (faster than regular momentum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1093d472-957f-4fd6-a763-82a1531de126",
+   "metadata": {},
+   "source": [
+    "$$ v := \\beta v - \\alpha \\nabla J(w + \\beta v) $$\n",
+    "$$ w := w + v $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5cab8690-a1a1-46d8-9cd7-863ec0588706",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizer = tf.keras.optimizers.SGD(learning_rate=0.001, momentum=0.9, nesterov=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "343645fd-cfe9-4596-81c0-b537b2277a6f",
+   "metadata": {},
+   "source": [
+    "### AdaGrad Adaptive Gradient Algorithm\n",
+    "\n",
+    "corrects direction to global optimum by scaling down gradient vecotr along steepest dimensions\n",
+    "\n",
+    "$$ G_t := G_{t-1} + \\nabla J(w_t)^2 $$\n",
+    "$$ w_{t+1} := w_t - \\frac{\\alpha}{\\sqrt{G_t} + \\epsilon} \\nabla J(w_t) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b3c5ce7-003b-47f7-a480-6efe13127e4f",
+   "metadata": {},
+   "source": [
+    "AdaGrad performs well for simple quadratic problems, it often stops too early when training NN: the learning rate gets scaled down so much that the algorithm ends up stopping before reaching the global optimum. Runs the risk of never converging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427d9df1-2903-42ac-ae0c-f3087ace91e7",
+   "metadata": {},
+   "source": [
+    "### RMSProp\n",
+    "\n",
+    "accumulates from most recent iterations, as opposed to all the gradients since beginning, uses exponential decay in first step:\n",
+    "\n",
+    "$$ E[g^2]_t := \\beta E[g^2]_{t-1} + (1 - \\beta) \\nabla J(w_t)^2 $$\n",
+    "$$ w_{t+1} := w_t - \\frac{\\alpha}{\\sqrt{E[g^2]_t} + \\epsilon} \\nabla J(w_t) $$\n",
+    "\n",
+    "this was perferred before adam optimizer came around did much better (except on simple problems) than AdaGrad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27278217-3c48-444c-a9f4-bfcfc0fdc664",
+   "metadata": {},
+   "source": [
+    "### Adam adaptive moment estimation\n",
+    "\n",
+    "keeps track of exponentially decaying average of past gradients (not sum!)\n",
+    "\n",
+    "(the decaying average is just 1 – β1 times the decaying sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a85a1e27-29be-4aec-b3c9-496aa82e8073",
+   "metadata": {},
+   "source": [
+    "#### Update biased moment estimates\n",
+    "\n",
+    "$$ m_t := \\beta_1 m_{t-1} + (1 - \\beta_1) \\nabla J(w_t) $$  \n",
+    "$$ v_t := \\beta_2 v_{t-1} + (1 - \\beta_2) \\nabla J(w_t)^2 $$\n",
+    "\n",
+    "#### biased correction\n",
+    "$$ \\hat{m}_t := \\frac{m_t}{1 - \\beta_1^t} $$  \n",
+    "$$ \\hat{v}_t := \\frac{v_t}{1 - \\beta_2^t} $$\n",
+    "\n",
+    "#### updated weights\n",
+    "$$ w_{t+1} := w_t - \\frac{\\alpha}{\\sqrt{\\hat{v}_t} + \\epsilon} \\hat{m}_t $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b3d9bf3c-0ad5-4992-a4d2-ca696d07beb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizer = tf.keras.optimizers.Adam(learning_rate=0.001, beta_1=0.9, beta_2=0.999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2dbfb75-c6d8-4117-b542-3af5691af8c5",
+   "metadata": {},
+   "source": [
+    "Three variants of Adam:\n",
+    "- AdaMax\n",
+    "- Nadam\n",
+    "- AdamW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8e5c9b5-df86-48bc-b497-4c27cf82a1cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
