--- a/skt-training.ipynb
+++ b/skt-training.ipynb
@@ -695,9 +695,479 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f89288f8-86c0-4025-b1e4-b8f87ca25821",
+   "metadata": {},
+   "source": [
+    "### AdaMax\n",
+    "\n",
+    "works like the equations above (Adam) but replaces step 2 `s <- max(β2s, abs(∇θJ(θ)))` drops step 4 and in step 5 updates by a factor of s which is the max of the absolute value of the time-decayed gradients. Could be more stable than Adam depends on data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd7e66e0-679a-47ef-9130-0fd06afebce7",
+   "metadata": {},
+   "source": [
+    "### Nadam\n",
+    "\n",
+    "Adam optimization + Nesterov trick, converge faster than Adam. Outperforms Adam but sometimes outperformed by RMSProp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d38654b-8ed1-4f7d-a46b-a8b95a272c7b",
+   "metadata": {},
+   "source": [
+    "### AdamW\n",
+    "\n",
+    "integrates a regularization technique called weight decay which reduces the size of models weights at each training interation by mutliplying them by a decay factor 0.99.\n",
+    "\n",
+    "Combining Adam with l2 regularization results in models that don't generalize well as those produced by SGD, AdamW fixes this issue.\n",
+    "\n",
+    "If none of the adam techniques work the data you might be using might not like adaptive gradients, try NAG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a07230f8-ab8b-4f21-863b-15b6b52dc63e",
+   "metadata": {},
+   "source": [
+    "`tf.keras.optimizers.Adam` `tf.keras.optimizers.Nadam` `tf.keras.optimizers.Adamax` `tf.keras.optimizers.experimental.AdamW` with AdamW we may want to tune the `weight_decay` hyperparam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adeee5a0-e8d0-4723-a199-ced99b45f895",
+   "metadata": {},
+   "source": [
+    "These optimizers are only first-order partial derivatives (Jacobians). Hessians are hard to compute in NN and are slow they don't even fit in memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6023f963-6b89-47dd-965c-ce3dde4c95c6",
+   "metadata": {},
+   "source": [
+    "### Learning rate\n",
+    "\n",
+    "setting too high may diverge, too low may take a very long time to converge to optimum. Its good to start with large learning rate then reduce it.\n",
+    "\n",
+    "It can also be beneficial to start with a low learning rate, increase it, then drop it again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1431e236-f806-464f-9bb1-19fbcd859eae",
+   "metadata": {},
+   "source": [
+    "#### Scheduling\n",
+    "- Power:\n",
+    "  η(t) = η0 / (1 + t/s)c drops at each step: n/2 -> n/3 -> n/4 and so on\n",
+    "- Exponential:\n",
+    "  η(t) = η0 0.1t/s gradually drop by a factor of 10 every steps\n",
+    "- Piecewise constant:\n",
+    "  n0 = 0.1 for 5 epochs, n1 = 0.001 for 50 epochs, involves fiddling aronud\n",
+    "- Performance:\n",
+    "  Measure the validation error every N steps, reduce the learning rate by a factor of λ\n",
+    "- 1cycle:\n",
+    "  starts by increasing initial learning rate till n1 (halfway through training) then decreasing learning rate back down to n0\n",
+    "\n",
+    "both performance and exponential scheduling performs well, but 1cycle might perform even better"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "aac34e90-7edd-4e98-b540-1312a70212ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# power scheduling\n",
+    "# optimizer = tf.keras.optimizers.SGD(learning_rate=0.01, decay=1e-4)\n",
+    "# ^ old way of doing this\n",
+    "\n",
+    "initial_learning_rate = 0.01\n",
+    "lr_schedule = tf.keras.optimizers.schedules.PolynomialDecay(\n",
+    "    initial_learning_rate,\n",
+    "    decay_steps=100000,  # Number of steps for the decay to happen\n",
+    "    end_learning_rate=0.0001,  # Final learning rate after decay\n",
+    "    power=1.0  # Power for polynomial decay (set to 1.0 for linear decay)\n",
+    ")\n",
+    "\n",
+    "# Set up the optimizer with the learning rate schedule\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=lr_schedule)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cf1e13c5-0983-4061-9679-eaa77751a073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exponential decay\n",
+    "def exponential_decay_fn(epoch):\n",
+    "    lr0 = 0.01  # Initial learning rate\n",
+    "    s = 20  # Decay step\n",
+    "    return lr0 * 0.1 ** (epoch / s)\n",
+    "\n",
+    "# Define the LearningRateScheduler callback with the decay function\n",
+    "lr_scheduler = tf.keras.callbacks.LearningRateScheduler(exponential_decay_fn)\n",
+    "# history = model.fit(X_train, y_train, [...], callbacks=[lr_scheduler])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bc1113a9-3d73-4631-a5fa-94eff750ae10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Theres a built-in exponential decay:\n",
+    "# Define the exponential decay schedule\n",
+    "lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "    initial_learning_rate=0.01,  # Initial learning rate\n",
+    "    decay_steps=1000,  # Number of steps per decay\n",
+    "    decay_rate=0.96,  # Decay factor\n",
+    "    staircase=True,  # If True, decay in discrete intervals (step-wise)\n",
+    ")\n",
+    "\n",
+    "# Use the learning rate schedule with an optimizer\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=lr_schedule)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10e95afd-a826-400c-b227-75c4b73955cd",
+   "metadata": {},
+   "source": [
+    "### Exponential Decay Example\n",
+    "\n",
+    "Let’s assume the following parameters for the exponential decay:\n",
+    "\n",
+    "- Initial learning rate \\( \\text{lr}_0 = 0.01 \\)\n",
+    "- Decay rate \\( \\text{decay\\_rate} = 0.96 \\)\n",
+    "- Decay steps \\( \\text{decay\\_steps} = 1000 \\)\n",
+    "\n",
+    "The formula for exponential decay is:\n",
+    "\n",
+    "$$\n",
+    "\\text{lr}(t) = \\text{lr}_0 \\times \\text{decay\\_rate}^{\\frac{t}{\\text{decay\\_steps}}}\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "- \\( \\text{lr}_0 \\) is the initial learning rate.\n",
+    "- \\( t \\) is the current step (epoch).\n",
+    "- \\( \\text{decay\\_rate} \\) is the factor by which the learning rate is reduced at each step.\n",
+    "- \\( \\text{decay\\_steps} \\) is the number of steps per decay.\n",
+    "\n",
+    "#### Step 1: Initial Learning Rate\n",
+    "\n",
+    "At the start (epoch 0), the learning rate is:\n",
+    "\n",
+    "$$\n",
+    "\\text{lr}(0) = 0.01\n",
+    "$$\n",
+    "\n",
+    "#### Step 2: After 1 Step (Epoch 1)\n",
+    "\n",
+    "After 1 step, the learning rate decays by the `decay_rate` of 0.96. The new learning rate will be:\n",
+    "\n",
+    "$$\n",
+    "\\text{lr}(1) = 0.01 \\times 0.96 = 0.0096\n",
+    "$$\n",
+    "\n",
+    "#### Step 3: After 2 Steps (Epoch 2)\n",
+    "\n",
+    "After 2 steps, the learning rate will decay further, and the new learning rate is:\n",
+    "\n",
+    "$$\n",
+    "\\text{lr}(2) = 0.01 \\times 0.96^2 = 0.01 \\times 0.9216 = 0.009216\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae8558ac-96d7-48dd-8422-14329b1e8f1a",
+   "metadata": {},
+   "source": [
+    "You could have the learning rate update at every steps (if you have many) instead of at the beginning of each epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b22a49b1-546e-45f0-ae1c-0a1095535676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# piece-wise\n",
+    "def piecewise_constant_fn(epoch):\n",
+    "    if epoch < 5:\n",
+    "        return 0.01\n",
+    "    elif epoch < 15:\n",
+    "        return 0.005\n",
+    "    else:\n",
+    "        return 0.001\n",
+    "\n",
+    "# performance\n",
+    "lr_scheduler = tf.keras.callbacks.ReduceLROnPlateau(factor=0.5, patience=5)\n",
+    "# history = model.fit(X_trian, y_train, [...], callbacks=[lr_scheduler])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "56daec68-6920-4811-8452-d76c4960543d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# updates after each step:\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "# Generate synthetic training data (1000 samples, 10 features each)\n",
+    "X_train = np.random.rand(1000, 10).astype(np.float32)\n",
+    "\n",
+    "batch_size = 32\n",
+    "n_epochs = 25\n",
+    "n_steps = n_epochs * math.ceil(len(X_train) / batch_size)\n",
+    "scheduled_learning_rate = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "    initial_learning_rate=0.01, decay_steps=n_steps, decay_rate=0.1)\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=scheduled_learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b727d9d8-0921-49b4-9fe6-a21d1ad36271",
+   "metadata": {},
+   "source": [
+    "### L1 and L2 Regularization (L1: Lasso Regression, L2: Ridge Regression)\n",
+    "\n",
+    "L2 to contrain a NN connection weights, L1 if you want a sparse model)\n",
+    "\n",
+    "L1 penalty term: adds the sum of absolute values of the weights to loss function\n",
+    "\n",
+    "L1 feature selection: selectes important features\n",
+    "\n",
+    "L2 penalty term: Adds the sum of the squared values of the weights to the loss function\n",
+    "\n",
+    "L2 feature selections: all features contribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d98b7395-ef4f-4317-8206-31329b0615f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = tf.keras.layers.Dense(100, activation=\"relu\",\n",
+    "                              kernel_initializer=\"he_normal\",\n",
+    "                              kernel_regularizer=tf.keras.regularizers.l2(0.01))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfe0ed30-5118-49b3-985e-10befd08cae8",
+   "metadata": {},
+   "source": [
+    "if both are needed: `tf.keras.regularizers.l1_l2()` L1 + L2 = Elastic Net"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd54015-e4c7-4b28-8a61-0bbeac44f8a8",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "L1\\_loss = \\lambda \\sum |w_i|\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "L2\\_loss = \\lambda \\sum w_i^2\n",
+    "$$\n",
+    "\n",
+    "Elastic Net combines both penalties:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_1 \\sum |w_i| + \\lambda_2 \\sum w_i^2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98a2e4bb-ab89-4c14-8bdd-14d8708f56aa",
+   "metadata": {},
+   "source": [
+    "instead of repeating arguments (same regularizer, activation, initialization) in all hidden layers, you could use loops, but there is `functools.partial()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "db068843-0d76-40a9-891b-4793b0971cbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "RegularizedDense = partial(\n",
+    "    tf.keras.layers.Dense,\n",
+    "    activation=\"relu\",\n",
+    "    kernel_initializer=\"he_normal\",\n",
+    "    kernel_regularizer=tf.keras.regularizers.l2(0.01)\n",
+    ")\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=[28, 28]),\n",
+    "    RegularizedDense(100),\n",
+    "    RegularizedDense(100),\n",
+    "    RegularizedDense(10, activation=\"softmax\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31eb0d03-4f56-4bc0-a6c0-3efa00e144bb",
+   "metadata": {},
+   "source": [
+    "Do not use Adam with L2 use AdamW"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "520e131e-5c0e-4a6c-8fd8-62deccfc99b6",
+   "metadata": {},
+   "source": [
+    "### Dropout Regularization\n",
+    "\n",
+    "at every training step it ignores neurons\n",
+    "\n",
+    "improves accuracy 1-2%\n",
+    "\n",
+    "dropout rate hyperparam is p set between 10-50%, 20-30% in recurrent NN, 40-50% CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7c9b2e88-e556-4af0-9ad1-f91fd0d79309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=[28,28]),\n",
+    "    tf.keras.layers.Dropout(rate=0.2),\n",
+    "    tf.keras.layers.Dense(100, activation=\"relu\",\n",
+    "                          kernel_initializer=\"he_normal\"),\n",
+    "    tf.keras.layers.Dropout(rate=0.2),\n",
+    "    tf.keras.layers.Dense(100, activation=\"relu\",\n",
+    "                          kernel_initializer=\"he_normal\"),\n",
+    "    tf.keras.layers.Dropout(rate=0.2),\n",
+    "    tf.keras.layers.Dense(10, activation=\"softmax\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f00e42-728b-46dd-9121-00628a376f0b",
+   "metadata": {},
+   "source": [
+    "make sure to evaluate the training loss without dropout (after training)\n",
+    "\n",
+    "increase dropout if overfitting and vise-versa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6709beb4-8828-4bd2-9af0-6aa353cb9cf5",
+   "metadata": {},
+   "source": [
+    "### Monte Carlo (MC) Dropout\n",
+    "\n",
+    "can improve performance of any trained dropout model without having to retrain it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "97608b85-19ca-4e11-a647-d7afad75098e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate synthetic training data (1000 samples, 10 features each)\n",
+    "X_test = np.random.rand(200, 28, 28).astype(np.float32)\n",
+    "\n",
+    "y_probas = np.stack([model(X_test, training=True)\n",
+    "                     for sample in range(100)])\n",
+    "y_proba = y_probas.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "911fb263-f5e8-4cc7-ad70-3af690757779",
+   "metadata": {},
+   "source": [
+    "model(X) is similar to model.predict(X) except it returns a tensor rather than a NumPy array\n",
+    "\n",
+    "training=True ensures that the Dropout layer remains active"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a837317-b69a-4636-a522-d61f86af04ed",
+   "metadata": {},
+   "source": [
+    "Averaging over multiple predictions with dropout turned on gives us a Monte Carlo estimate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bb838f8-ea71-43a7-b25c-3fd8d4c0d632",
+   "metadata": {},
+   "source": [
+    "### Max-Norm Regularization\n",
+    "\n",
+    "explicitly limits the magnitude of the weight vectors by constraining them within a fixed norm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "772913d2-4eaf-4175-a94b-1816a49ffd8c",
+   "metadata": {},
+   "source": [
+    "reducing r helps reduce overfitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c6297ea8-26c7-4e2c-8752-4c08508c5df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dense = tf.keras.layers.Dense(100, activation=\"relu\", kernel_initializer=\"he_normal\",\n",
+    "                              kernel_constraint=tf.keras.constraints.max_norm(1.))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4934df5c-945d-49a0-97a3-05449d2cfe96",
+   "metadata": {},
+   "source": [
+    "If a sparse model is needed use L1 regularization zero out tiny weights, if a sparser model is needed use TensorFlow Model Optimization Toolkit\n",
+    "\n",
+    "low-latency model performs lightning-fast predictions, use ReLU or leaky RelU fold bath normalization layers into previous layers, reduce float precision from 32 bits to 16 or 8\n",
+    "\n",
+    "use MC dropout to boost performance and get more reliable probability estimates, along with uncertainty estimates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e5c9b5-df86-48bc-b497-4c27cf82a1cb",
+   "id": "3aa5c4d0-22d1-49b0-8fd9-5afd7550a92c",
    "metadata": {},
    "outputs": [],
    "source": []
